src/sass/app.sass
body, html
  background: white

li
  margin: 10px

.hero.is-primary
  background-color: transparent

.hero-body
  padding: 1.5rem 1.5rem

  .content
    text-align: center

    h1
      font-size: 1.4em
      margin-bottom: 0.8em

    h4
      margin-bottom: 0

    >
      .title, .subtitle
        color: black

.hero.is-primary .subtitle a:not(.button)
  color: black

img.social-logo
  display: inline-block
  margin-right: 10px
  text-indent: -9999px
  width: 20px

#app > :nth-child(2)
  padding-top: 0

.help.form-label
  font-size: 1em
  font-weight: 600
  color: #565656

.center-block
  margin: 0 auto
  display: block

.box span.icon
  float: right
  font-size: 1.7em
  padding: 2rem 2rem 0 0

.is-large
  &.fab
    font-size: 7em

  &.fas
    font-size: 5em
    margin-left: 0.2em

.menu-list li a:hover
  background: #d9d9d9

.notification a:not(.button):not(.dropdown-item)
  text-decoration: none
  font-weight: bolder
  color: mediumvioletred

.token.number
  display: inline
  padding: inherit
  font-size: inherit
  line-height: inherit
  text-align: inherit
  vertical-align: inherit
  border-radius: inherit
  font-weight: inherit
  white-space: inherit
  background: inherit
  margin: inherit

#effectiveFromDate
  display: block

.card-content p:first-child
  margin-bottom: 1em
  font-size: 1.1em
  font-style: italic
  font-weight: bolder

.card-content p:first-child a
  color: #c5c5c5

.heart
  color: red

.scrollable
  height: 62vh
  display: flex
  overflow-y: auto
  flex-direction: column
  padding: 1em

.scrollable-thirdparty
  height: 59vh
  display: flex
  overflow-y: scroll
  flex-direction: column
  border: solid #f3f3f3 2px
  border-radius: 8px
  padding: 0.5em

.scrollable-thirdparty.content
  > a
    padding-bottom: 1em

.heart-logo
  height: 1em

.button-logo
  height: 1em
  margin-right: 5px

.checkbox-logo
  height: 1.5em
  padding-right: 8px
  vertical-align: middle

.column.box
  padding: 1em

#page-404
  > div
    display: table-cell
    vertical-align: middle
    margin: 2em auto

    color: #888
    display: table
    font-family: sans-serif
    height: 100%
    text-align: center
    width: 100%

  h1
    color: white
    font-size: 4em
    font-weight: 600
    text-align: center

  p
    margin: 0 auto
    width: 50%
    text-align: center
    color: white
    font-size: 2em
    font-weight: 200

.modal-card-body
  ul
    list-style-type: disc

  li
    margin-left: 2.5em

  textarea
    height: 66%
    width: 100%

.center-parent
  width: 100%
  text-align: center

  > .child
    display: inline-block
    margin: 2px

.hero-image
  width: 65%

.start-btn
  padding-left: 5em
  padding-right: 5em

.column.is-information
  .nav-btn
    cursor: grab
    height: 3em
    opacity: 0.8

  .sidebar-img
    pointer-events: none
    margin: 10em 3em

.subtitle p
  font-size: 0.7em

.modal-card-body.modal-box
  display: flex
  flex-direction: column
  height: 450px

  textarea
    height: 100%

.box.final-box > a.button
  margin-right: 0.2em

.no-select
  user-select: none

.title-logo
  margin: 0 2em

// Scrollbar Overrides
\::-webkit-scrollbar
  width: 0.3em

\::-webkit-scrollbar-track
  background: #ebecef
  border-radius: 8px

\::-webkit-scrollbar-thumb
  background: #0bbdff
  border-radius: 8px

  &:hover
    background: #65cdf4

// Bulma Overrides
.button
  margin: 0.5em
  height: 2.5em
  padding-left: 1.25em
  padding-right: 1.25em

.checkbox, .radio
  margin: 0.3em

.card-footer-item.is-disabled
  opacity: 0.5
  pointer-events: none
  cursor: not-allowed

